# zero-over-k

./: Cargo.toml  README.md  dox.txt  tasks
.github/workflows/: ci.yml
src/: commitment.rs  concrete_oracle.rs  data_structures.rs  error.rs  indexer.rs  lib.rs  mock_prover.rs  rng.rs  tests.rs  turbo_plonk.rs  util.rs
src/iop/: error.rs  iop.txt  mod.rs  prover.rs  verifier.rs
src/lookup/: mod.rs  permute.rs  sort.rs  subset_equality.rs
src/multiproof/: error.rs  mod.rs  piop.txt  poly.rs
src/multiproof/piop/: mod.rs  prover.rs  verifier.rs
src/oracles/: README.md  fixed.rs  instance.rs  mod.rs  query.rs  rotation.rs  traits.rs  witness.rs
src/permutation/: grand_product.rs  individual.rs  mod.rs
src/piop/: error.rs  iop.txt  prover.rs  verifier.rs
src/tests/: mod.rs  simple.rs  with_copy.rs  with_lookup.rs
src/vo/: README.md  error.rs  expression.rs  generic_lookup_vo.rs  generic_vo.rs  linearisation.rs  mod.rs  new_expression.rs  precompiled_vos.rs  query.rs  virtual_expression.rs
src/vo/precompiled/: add.rs  arith.rs  logic.rs  mod.rs  mul.rs  overlapping_fixed_oracles.rs  overlapping_instance_oracles.rs  overlapping_witness_oracles.rs  plonk_arith.rs  rescue.rs  tests.rs
src/vo/precompiled_lookups/: mod.rs  simple.rs  simple_1_arith.rs  simple_3_arith.rs
